--- a/ar.html
+++ b/ar.html
@@ -394,7 +394,7 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile" style="text-align: right;">مرحبا أهلا وسهلا <small><small><small> أصدقاء من <span id="location"></span>
+      <h3 class="hidden-mobile" style="text-align: right;">مرحبا أهلا وسهلا <small><small><small> أصدقاء من <span id="location">العالم</span>
              </small></small> </small>
         <span style="float:left;font-family:verdana;">
             <select id="languages" name="languages"
@@ -495,7 +495,7 @@
       <p align="justify" style="text-align: right;">
         
         <br class="display-mobile">
-        <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span id="location2"></span>!</br></br></span>
+        <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span id="location2">العالم</span>!</br></br></span>
     
         حالياً، يعمل الدكتور هونغ شو كمهندس بحث وتطوير متخصص في <strong>أنظمة الطاقة الإلكترونية</strong> مقره ميونيخ، ملتزماً بتحقيق الحياد الكربوني في قطاعات <strong>الطاقة</strong> و<strong>النقل</strong>. طوال مسيرته المهنية، عمل مع شركات دولية ومؤسسات أكاديمية في أوروبا والصين، حيث نشر أكثر من <strong>15 ورقة بحثية</strong> بما يقارب <strong>300 اقتباس</strong>، وحصل على <strong>3 براءات اختراع</strong>. بالإضافة إلى ذلك، رأس جلسة في <strong><a href="https://unfccc.int/" target="_blank">مؤتمر الأمم المتحدة للتغير المناخي</a></strong> في بون، شارك في مجموعة الخبراء في <strong><a href="https://unece.org/" target="_blank">اللجنة الاقتصادية لأوروبا التابعة للأمم المتحدة</a></strong> بجنيف، وكان عضوًا في <strong>لجنة تحكيم أكاديمية</strong> في <strong><a href="https://symposium.org/" target="_blank">منتدى سانت جالين</a></strong> في سويسرا. الدكتور شو أيضاً مراجع لعدة مجلات ذات تأثير كبير في مجالات <strong>الطاقة</strong>، <strong>النقل</strong>، و<strong>الاستدامة</strong>. تم تكريم جهوده التعددية التخصصات بجوائز منها منحة بنك سانتاندر، ورقة دعوة ECS ومنحة سفر، ومنحة إنتل Edge AI، ومنحة إيراسموس، وغيرها.
       </p>
