--- a/cn.html
+++ b/cn.html
@@ -162,6 +162,7 @@
       const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
 
       document.getElementById("location").textContent = countryName;
+      document.getElementById("location2").textContent = countryName;
       document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
       document.getElementById("country-flag").alt = countryName;
     }
@@ -230,7 +231,6 @@
               class='blue'>A</span></a> / <a href="https://life.h-xu.com" target="_blank" >B</a></li>
             <p>____</p> -->
             <p></p>
-            
             <img src="images/logo.png" width="45" />
             <br>
             <span id="greetings" style="color: rgb(253, 93, 7); font-weight: bold;"></span>
@@ -450,7 +450,7 @@
       <div>
 
         <p align="justify">
-          <span class="display-mobile">欢迎来自<span id="location2"></span>的朋友 :-）</br></br></span>
+          <span class="display-mobile">欢迎来自<span id="location2">地球</span>的朋友 :-）</br></br></span>
 
           目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文15余篇</strong>、<strong>引用295次</strong>, 并获<strong>3项专利授权</strong>。曾在<strong><a href="https://unfccc.int/" target="_blank">联合国波恩气候变化大会</a></strong>主持“中国<strong>能源转型</strong>与技术创新”主题分会，多次参与<strong><a href="https://unece.org/" target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论。同时他还担任多项能源和交通领域高引期刊的<strong>审稿人</strong>, 以及<strong>瑞士圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得美国电化学学会论文邀请及旅行奖、英特尔边缘AI奖学金、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
         </p>
