--- a/de.html
+++ b/de.html
@@ -401,7 +401,7 @@
 
       </div>
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Servus! Grüezi! <small><small><small> Freunde aus <span id="location"></span>
+      <h3 class="hidden-mobile">Servus! Grüezi! <small><small><small> Freunde aus <span id="location">aller Welt</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_de.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -498,7 +498,7 @@
         </span>
 
       </p>
-      <span class="display-mobile">Willkommen, Freunde aus <span id="location2"></span> :-)</br></br></span>
+      <span class="display-mobile">Willkommen, Freunde aus <span id="location2">aller Welt</span> :-)</br></br></span>
       <p align="justify">
         Derzeit arbeitet Dr. Hong Xu als <strong>F&E-Ingenieur</strong> und spezialisiert sich auf <strong>e-Power-Systeme</strong> mit Sitz in München, engagiert für die Erreichung der Klimaneutralität in den Sektoren <strong>Energie</strong> und <strong>Transport</strong>. Im Laufe seiner Karriere hat er mit internationalen Unternehmen und akademischen Institutionen in Europa und China zusammengearbeitet, über <strong>15 veröffentlichte Artikel</strong> mit fast <strong>300 Zitierungen</strong> und <strong>3 erteilte Patente</strong> erzielt. Zudem leitete er eine Sitzung auf der <strong><a href="https://unfccc.int/" target="_blank">UN-Klimakonferenz</a></strong> in Bonn, nahm an der Expertengruppe der <strong><a href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für Europa</a></strong> in Genf teil und war Mitglied der <strong>Akademischen Jury</strong> beim <strong><a href="https://symposium.org/" target="_blank">St. Gallen Symposium</a></strong> in der Schweiz. Dr. Xu ist außerdem Peer-<strong>Reviewer</strong> für mehrere hochrangige Zeitschriften in den Bereichen <strong>Energie</strong>, <strong>Transport</strong> und <strong>Nachhaltigkeit</strong>. Seine interdisziplinären Bemühungen wurden mit Auszeichnungen wie dem Santander-Bank-Stipendium, ECS-Eingeladener Beitrag und Reisestipendium, Intel Edge KI-Stipendium und Erasmus-Stipendium anerkannt.
     </p>
