--- a/es.html
+++ b/es.html
@@ -400,7 +400,7 @@
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">¡Hola, qué alegría! <small><small> <small>Bienvenidos amigos de <span
-                id="location"></span> :-)</small></small> </small>
+                id="location">mundo</span> :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_es.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ar.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -499,7 +499,7 @@
 
 
         <p align="justify">
-          <span class="display-mobile">Bienvenidos amigos de <span id="location2"></span> :-)</br></br></span>
+          <span class="display-mobile">Bienvenidos amigos de <span id="location2">mundo</span> :-)</br></br></span>
           
           Actualmente, el Dr. Hong Xu trabaja como <strong>Ingeniero de I+D</strong> especializado en <strong>Sistemas e-Power</strong> con sede en Múnich, dedicado a lograr la neutralidad de carbono en los sectores de <strong>Energía</strong> y <strong>Transporte</strong>. A lo largo de su carrera, ha trabajado con corporaciones internacionales e instituciones académicas en Europa y China, logrando más de <strong>15 artículos publicados</strong> con casi <strong>300 citas</strong> y <strong>3 patentes otorgadas</strong>. Además, presidió una sesión en la <strong><a href="https://unfccc.int/" target="_blank">Conferencia de la ONU sobre el Cambio Climático</a></strong> en Bonn, participó en el Grupo de Expertos de la <strong><a href="https://unece.org/" target="_blank">Comisión Económica de la ONU para Europa</a></strong> con sede en Ginebra, y sirvió como miembro del <strong>Jurado Académico</strong> en el <strong><a href="https://symposium.org/" target="_blank">Simposio de St. Gallen</a></strong> en Suiza. El Dr. Xu también es <strong>revisor</strong> para varias revistas de alto impacto en los campos de <strong>Energía</strong>, <strong>Transporte</strong> y <strong>Sostenibilidad</strong>. Sus esfuerzos interdisciplinarios han sido reconocidos con premios como la beca del Banco Santander, la beca de viaje y artículos invitados de ECS, la beca Intel Edge AI y la beca Erasmus.
       </p>
@@ -549,7 +549,7 @@
         </span>
       </p>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%"> -->
       <hr class="hidden-mobile">
 
 
@@ -671,7 +671,9 @@
         </ul>
       </div>
 
-      <hr />
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+      
       <div class="doc-section" id="research-interests">
         <h3>Intereses de investigación</h3>
         <ul class="square">
