--- a/fr.html
+++ b/fr.html
@@ -410,7 +410,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Bonjour! Salut! <small><small><small> Bienvenue aux amis <span id="location"></span>
+      <h3 class="hidden-mobile">Bonjour! Salut! <small><small><small> Bienvenue aux amis <span id="location">du monde</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_fr.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -511,7 +511,7 @@
 
 
         <p align="justify">
-          <span class="display-mobile">Bienvenue aux amis <span id="location2">de Monde</span> :-)</br></br></span>
+          <span class="display-mobile">Bienvenue aux amis <span id="location2">du monde</span> :-)</br></br></span>
       
           Actuellement, le Dr. Hong Xu est <strong>Ingénieur en R&D</strong> spécialisé dans les <strong>systèmes e-Power</strong> basé à Munich, dédié à la réalisation de la neutralité carbone dans les secteurs de <strong>l'énergie</strong> et des <strong>transports</strong>. Au cours de sa carrière, il a travaillé avec des entreprises internationales et des institutions académiques en Europe et en Chine, réalisant plus de <strong>15 articles publiés</strong> avec près de <strong>300 citations</strong>, et <strong>3 brevets accordés</strong>. De plus, il a présidé une session à la <strong><a href="https://unfccc.int/" target="_blank">Conférence de l'ONU sur les changements climatiques</a></strong> à Bonn, a participé au Groupe d'experts de la <strong><a href="https://unece.org/" target="_blank">Commission économique de l'ONU pour l'Europe</a></strong> basée à Genève, et a servi en tant que <strong>Jury académique</strong> au <strong><a href="https://symposium.org/" target="_blank">Symposium de St. Gallen</a></strong> en Suisse. Le Dr. Xu est également <strong>examinateur</strong> pour plusieurs revues à fort impact dans les domaines de <strong>l'énergie</strong>, des <strong>transports</strong> et de la <strong>durabilité</strong>. Ses efforts interdisciplinaires ont été reconnus par des récompenses telles que la bourse de la Banque Santander, l'article invité par l'ECS et la bourse de voyage, la bourse Intel Edge AI et la bourse Erasmus.
       </p>
@@ -652,8 +652,8 @@
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">-->
-      <!-- <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile"> -->
+      <!-- <hr class="display-mobile" style="width:113%">-->
+      <hr class="hidden-mobile"> 
 
 
       <div class="doc-section" id="education">
