--- a/it.html
+++ b/it.html
@@ -403,7 +403,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Buongiorno! Saluti! <small><small> <small>Benvenuti amici <span id="location"></span>
+      <h3 class="hidden-mobile">Buongiorno! Saluti! <small><small> <small>Benvenuti amici <span id="location">dal mondo</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_it.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -501,7 +501,7 @@
       </p>
 
         <p align="justify">
-          <span class="display-mobile">Benvenuti amici <span id="location2"></span> :-)</br></br></span>
+          <span class="display-mobile">Benvenuti amici <span id="location2">dal mondo</span> :-)</br></br></span>
           
           Attualmente, il Dott. Hong Xu è un <strong>Ingegnere R&D</strong> specializzato in <strong>Sistemi e-Power</strong> con sede a Monaco di Baviera, dedicato a raggiungere la neutralità carbonica nei settori <strong>Energia</strong> e <strong>Trasporti</strong>. Nel corso della sua carriera, ha lavorato con aziende internazionali e istituzioni accademiche in Europa e Cina, pubblicando oltre <strong>15 articoli</strong> con quasi <strong>300 citazioni</strong> e ottenendo <strong>3 brevetti</strong>. Inoltre, ha presieduto una sessione alla <strong><a href="https://unfccc.int/" target="_blank">Conferenza delle Nazioni Unite sui Cambiamenti Climatici</a></strong> a Bonn, ha partecipato al Gruppo di Esperti della <strong><a href="https://unece.org/" target="_blank">Commissione Economica per l'Europa delle Nazioni Unite</a></strong> con sede a Ginevra, e ha servito come membro della <strong>Giuria Accademica</strong> al <strong><a href="https://symposium.org/" target="_blank">Simposio di St. Gallen</a></strong> in Svizzera. Il Dott. Xu è anche un <strong>Revisore</strong> per diverse riviste ad alto impatto nei campi <strong>Energia</strong>, <strong>Trasporti</strong> e <strong>Sostenibilità</strong>. I suoi sforzi interdisciplinari sono stati riconosciuti con premi tra cui la Borsa di Studio Santander Bank, l'ECS Travel Grant, l'Intel Edge AI Scholarship e l'Erasmus Scholarship.
         </p>
