--- a/jp.html
+++ b/jp.html
@@ -394,7 +394,7 @@
         <span>
           <ruby>こんにちは！<rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-          </ruby><small><small><small><span id="location"></span>からの友人を歓迎します:-)</small></small> </small>
+          </ruby><small><small><small><span id="location">地球</span>からの友人を歓迎します:-)</small></small> </small>
         </span>
         <span style="float:right; font-family:verdana;margin-top:10px;">
           <img src="images/flag_jp.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -491,7 +491,7 @@
       </p>
 
       <p align="justify">
-        <span class="display-mobile">ようこそ、<span id="location2"></span>からの友達 :-）</br></br></span>
+        <span class="display-mobile">ようこそ、<span id="location2">地球</span>からの友達 :-）</br></br></span>
       
         現在、徐泓 (<script
         id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歲) 博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして、<strong>エネルギーと交通</strong>分野の<strong>炭素中和</strong>を実現するために活動しています。彼は<strong>国連ボン気候変動会議</strong>で「中国のエネルギー転換と技術革新」のセッションを主宰し、国連欧州経済委員会の交通と気候の<strong>専門家会議</strong>に参加しています。彼は学位取得中に国際企業や中欧の学術機関と協力して<strong>15以上の論文</strong>を発表し、<strong>295回以上引用</strong>され、<strong>3つの特許</strong>を取得しました。また、彼はエネルギーと交通の分野で7つの高い影響力のあるジャーナルの<strong>査読者</strong>を務め、<strong>スイス・サンクトガレン国際経済フォーラム</strong>の<strong>学術審査員</strong>も務めています。彼はアメリカ電気化学会の論文招待と旅行賞、インテル・エッジAI奨学金、欧州連合エラスムス奨学金、中国の"挑戦杯"起業全国銅賞などを受賞しています。
@@ -700,7 +700,7 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           徐泓
-          <small>博士</small> | 最終更新: 2023年12月
+          <small>博士</small> | 最終更新: 2024年7月
         </small></p>
     </footer>
 
