--- a/kr.html
+++ b/kr.html
@@ -408,7 +408,7 @@
       <h3 class="hidden-mobile"> <span><ruby>안녕하세요！<rt><text style="color:rgb(255, 255, 255)">An nyeong ha se yo！</text>
             </rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-          </ruby><small><small><small><span id="location"></span> 에서 온 친구들을 환영합니다 :-)</small></small> </small>
+          </ruby><small><small><small><span id="location">지구</span> 에서 온 친구들을 환영합니다 :-)</small></small> </small>
 
         </span>
         <span style="float:right;font-family:verdana;margin-top:7px;">
@@ -511,7 +511,7 @@
       </p>
 
       <p align="justify">
-        <span class="display-mobile">환영합니다, <span id="location2"></span>에서 온 친구들 :-）</br></br></span>
+        <span class="display-mobile">환영합니다, <span id="location2">지구</span>에서 온 친구들 :-）</br></br></span>
       
         현재, 쉬홍 (<script id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세) 박사는 독일 산업계에서 <strong>신 에너지 동력 시스템</strong> 전문 엔지니어로 활동하며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>을 실현하기 위해 노력하고 있습니다. 그는 <strong>유엔 본 클라이메트 변화 컨퍼런스</strong>에서 "중국의 에너지 전환과 기술 혁신" 주제의 세션을 주관하고, 유엔 유럽 경제위원회의 교통과 기후 <strong>전문가 그룹 회의</strong>에 참여했습니다. 그는 학위 과정 중에 국제 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고, <strong>280회 이상 인용</strong>되었으며, <strong>3개의 특허</strong>를 획득했습니다. 또한 그는 에너지와 교통 분야에서 7개의 고 영향력 저널의 <strong>심사위원</strong>을 맡고 있으며, <strong>스위스 성갈렌 국제 경제 포럼</strong>의 <strong>학술 심사위원</strong>도 맡고 있습니다. 그는 미국 전기화학회 논문 초대 및 여행상, 인텔 엣지 AI 장학금, 유럽연합 에라스무스 장학금, 중국 "도전컵" 창업 국가 동상 등을 수상했습니다.
       </p>
