--- a/ru.html
+++ b/ru.html
@@ -386,7 +386,7 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Привет! <small><small><small>Добро пожаловать, друзья из <span id="location"></span>
+      <h3 class="hidden-mobile">Привет! <small><small><small>Добро пожаловать, друзья из <span id="location">всего мира</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_ru.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -483,7 +483,7 @@
       </p>
 
       <p align="justify">
-        <span class="display-mobile">Добро пожаловать, друзья из <span id="location2"></span> :-)</br></br></span>
+        <span class="display-mobile">Добро пожаловать, друзья из <span id="location2">всего мира</span> :-)</br></br></span>
 
       В настоящее время доктор Хун Сюй занимает должность <strong>инженера по НИОКР</strong>, специализирующегося на <strong>системах электропитания</strong> с местом работы в Мюнхене, посвятив себя достижению углеродной нейтральности в секторах <strong>энергетики</strong> и <strong>транспорта</strong>. За время своей карьеры он сотрудничал с международными корпорациями и академическими учреждениями в Европе и Китае, опубликовав более <strong>15 научных статей</strong> с почти <strong>300 цитированиями</strong> и получив <strong>3 патента</strong>. Кроме того, он возглавлял сессию на <strong><a href="https://unfccc.int/" target="_blank">Конференции ООН по изменению климата</a></strong> в Бонне, участвовал в Группе экспертов <strong><a href="https://unece.org/" target="_blank">Экономической комиссии ООН для Европы</a></strong> в Женеве и был членом <strong>академического жюри</strong> на <strong><a href="https://symposium.org/" target="_blank">Симпозиуме в Санкт-Галлене</a></strong> в Швейцарии. Доктор Шу также является рецензентом для нескольких высокоценных журналов в области <strong>энергетики</strong>, <strong>транспорта</strong> и <strong>устойчивого развития</strong>. Его междисциплинарные усилия были отмечены наградами, включая стипендию Сантандер Банк, приглашение на ECS и стипендию на путешествие, стипендию Intel Edge AI, стипендию Эразмус и другие.
     </p>
