--- a/en.html
+++ b/en.html
@@ -367,7 +367,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Hey, Welcome! <small><small><small>Friends from <span id="location"></span> :-)</small></small> </small>
+      <h3 class="hidden-mobile">Hey, Welcome! <small><small><small>Friends from <span id="location">the World</span> :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_us.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_uk.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -482,7 +482,7 @@
       
 
       <p align="justify">
-        <span class="display-mobile">Greetings, friends from <span id="location2"></span>! <br><br></span>
+        <span class="display-mobile">Greetings, friends from <span id="location2">the World</span>! <br><br></span>
     
         Currently, Dr. Hong Xu serves as an <strong>R&D Engineer</strong> specializing in <strong>e-Power Systems</strong> based in Munich, dedicated to achieving carbon neutrality in the <strong>Energy</strong> and <strong>Transport</strong> sectors. Throughout his career, he has worked with international corporations and academic institutions in Europe and China, achieving over <strong>15 published papers</strong> with nearly <strong>300 citations</strong>, and <strong>3 granted patents</strong>. Moreover, he chaired a session at the <strong><a href="https://unfccc.int/" target="_blank">UN Climate Change Conference</a></strong> in Bonn, participated Group of Experts at the <strong><a href="https://unece.org/" target="_blank">UN Economic Commission for Europe</a></strong> based in Geneva, and served as an <strong>Academic Jury</strong> at the <strong><a href="https://symposium.org/" target="_blank">St. Gallen Symposium</a></strong> in Switzerland. Dr. Xu is also a Peer <strong>Reviewer</strong> for several high-impact journals in the <strong>Energy</strong>, <strong>Transport</strong>, and <strong>Sustainability</strong> fields. His interdisciplinary efforts have been recognized with awards including the Santander Bank Scholarship, ECS Invited Paper and Travel Grant, Intel Edge AI Scholarship, Erasmus Scholarship, and etc.
     </p>
@@ -617,7 +617,7 @@
           game</strong> is played for <strong>continuing</strong> the play.<br />
         <small>Copyright © 2016-
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Updated: 11.2023 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+          Updated: 07.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
         </small>
       </p>
     </footer>
