--- a/cn-resume.html
+++ b/cn-resume.html
@@ -86,6 +86,20 @@
       /* 更新动画时序函数 */
     }
 
+    .orange-dot-eth {
+      position: absolute;
+      top: 23.1%;
+      left: 50.9%;
+      width: 5px;
+      /* 减小红点尺寸 */
+      height: 5px;
+      /* 减小红点尺寸 */
+      background-color: rgba(255, 140, 0, 0.994);
+      border-radius: 50%;
+      animation: ripple 2s infinite ease-out;
+      /* 更新动画时序函数 */
+    }
+
     @keyframes ripple {
       0% {
         box-shadow: 0 0 0 0 rgba(255, 94, 0, 0.765),
@@ -334,7 +348,7 @@
 
       <div class="image-wrapper hidden-mobile ">
         <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;"  alt="banner Image" />
- 
+        <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
 
       </div>
 
@@ -362,9 +376,9 @@
               alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;"> 繁</a></span>&nbsp;<select id="languages" name="languages"
             style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="cn.html" select>中文</option>
+            <option value="cn-resume.html" select>中文</option>
             <option value="jp-resume.html">日本語</option>
-            <option value="kr.html">한국어</option>
+            <option value="kr-resume.html">한국어</option>
             <option value="de.html">Deutsch</option>
             <option value="en-resume.html">English</option>
             <option value="es.html">Español</option>
@@ -446,7 +460,7 @@
     <option value="cn-resume.html" select>🇨🇳 中文(简体)</option>
     <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
             <option value="jp-resume.html">🇯🇵 日本語</option>
-            <option value="kr.html">🇰🇷 한국어</option>
+            <option value="kr-resume.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
             <option value="en-resume.html">🇬🇧 English</option>
             <option value="es.html">🇪🇸 Español</option>
