--- a/cn-activities.html
+++ b/cn-activities.html
@@ -37,7 +37,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-
+ 
   <!-- Favicons
   ================================================== -->
   <link rel="shortcut icon" href="">
@@ -380,7 +380,7 @@
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="cn-activities.html" select>中文</option>
             <option value="jp-activities.html">日本語</option>
-            <option value="kr.html">한국어</option>
+            <option value="kr-activities.html">한국어</option>
             <option value="de.html">Deutsch</option>
             <option value="en-activities.html">English</option>
             <option value="es.html">Español</option>
@@ -462,7 +462,7 @@
     <option value="cn-activities.html" select>🇨🇳 中文(简体)</option>
     <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
             <option value="jp-activities.html">🇯🇵 日本語</option>
-            <option value="kr.html">🇰🇷 한국어</option>
+            <option value="kr-activities.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
             <option value="en-activities.html">🇬🇧 English</option>
             <option value="es.html">🇪🇸 Español</option>
