--- a/cn-research.html
+++ b/cn-research.html
@@ -434,7 +434,7 @@
                       onchange="window.location.href=this.options [this.selectedIndex].value">
                         <option value="cn-research.html" select>中文</option>
                         <option value="jp-research.html">日本語</option>
-                        <option value="kr.html">한국어</option>
+                        <option value="kr-research.html">한국어</option>
                         <option value="de.html">Deutsch</option>
                         <option value="en-research.html">English</option>
                         <option value="es.html">Español</option>
@@ -516,7 +516,7 @@
             <option value="cn-research.html" select>🇨🇳 中文(简体)</option>
             <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
                         <option value="jp-research.html">🇯🇵 日本語</option>
-                        <option value="kr.html">🇰🇷 한국어</option>
+                        <option value="kr-research.html">🇰🇷 한국어</option>
                         <option value="de.html">🇩🇪 Deutsch</option>
                         <option value="en-research.html">🇬🇧 English</option>
                         <option value="es.html">🇪🇸 Español</option>
