--- a/cn-resume.html
+++ b/cn-resume.html
@@ -506,7 +506,7 @@
             <p>____</p>
           <li>2023-2023 | <strong>高级管理教育, 绿色转型</strong>
             <div style="float: right"></div><br>
-            <strong><a href="https://quantic.edu/mba" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
+            <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
           <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://quantic.edu/mba" target="_blank">美国 · 昆藤商学院</a></strong> (全奖/Fellow)<br></p>
@@ -547,7 +547,7 @@
 
                 <li>2023-2023 | <strong>企业管理课程, 绿色转型</strong>
                   <div style="float: right"></div><br>
-                  <strong><a href="https://quantic.edu/mba" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
+                  <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
                 </li>
                 <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
                   <div style="float: right"></div><br>
