--- a/en-research.html
+++ b/en-research.html
@@ -302,7 +302,7 @@
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="en.html" select>English</option>
+            <option value="en-research.html" select>English</option>
             <option value="de.html">Deutsch</option>
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
@@ -310,9 +310,9 @@
            
             <option value="it.html">Italiano</option>
             <option value="ru.html">Русский</option>
-            <option value="cn.html">中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
+            <option value="cn-research.html">中文</option>
+            <option value="jp-research.html">日本語</option>
+            <option value="kr-research.html">한국어</option>
             <option value="ar.html">اللغة العربية</option>
             --->
           </select>
@@ -379,7 +379,7 @@
             <select id="languages" name="languages"
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="en.html" select>🇬🇧 English</option>
+              <option value="en-research.html" select>🇬🇧 English</option>
               <option value="de.html">🇩🇪 Deutsch</option>
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
@@ -387,9 +387,9 @@
               
               <option value="it.html">🇮🇹 Italiano</option>
               <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
+              <option value="cn-research.html">🇨🇳 中文</option>
+              <option value="jp-research.html">🇯🇵 日本語</option>
+              <option value="kr-research.html">🇰🇷 한국어</option>
               <option value="ar.html">🇸🇦 اللغة العربية</option>
               --->
             </select>
