--- a/jp-activities.html
+++ b/jp-activities.html
@@ -383,7 +383,7 @@
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="jp-activities.html" select>日本語</option>
             <option value="cn-activities.html">中文</option>
-            <option value="kr.html">한국어</option>
+            <option value="kr-activities.html">한국어</option>
             <option value="de.html">Deutsch</option>
             <option value="en-activities.html">English</option>
             <option value="es.html">Español</option>
@@ -459,7 +459,7 @@
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="jp-activities.html" select>🇯🇵 日本語</option>
             <option value="cn-activities.html">🇨🇳 中文</option>
-            <option value="kr.html">🇰🇷 한국어</option>
+            <option value="kr-activities.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
             <option value="en-activities.html">🇬🇧 English</option>
             <option value="es.html">🇪🇸 Español</option>
