--- a/cn-activities.html
+++ b/cn-activities.html
@@ -350,7 +350,7 @@
       <div class="image-wrapper hidden-mobile ">
         <img src="images/banner_cns6.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
 
-
+        <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
 
       </div>
 
