--- a/cn.html
+++ b/cn.html
@@ -58,6 +58,19 @@
 
 
   <style>
+    @font-face {
+  font-family: 'Twemoji Country Flags';
+  unicode-range: U+1F1E6-1F1FF, U+1F3F4, U+E0062-E0063, U+E0065, U+E0067, U+E006C, U+E006E, U+E0073-E0074, U+E0077, U+E007F;
+  src: url('https://cdn.jsdelivr.net/npm/country-flag-emoji-polyfill@0.1/dist/TwemojiCountryFlags.woff2') format('woff2');
+}
+
+body {
+  font-family: var(--user-defined-font), sans-serif;
+}
+
+.win {
+  font-family: "Twemoji Country Flags", var(--user-defined-font), sans-serif;
+}
   </style>
 
 
@@ -850,6 +863,11 @@
       }
     </script>
 
+<script  type="text/javascript" >
+if (/windows/i.test(navigator.userAgent)) {
+  document.body.classList.add('win')
+}
+</script>
 <script type="text/javascript" src="/js/block_save_as.js"></script>
 
 <script type="text/javascript" src="/js/cn_fanti_translate.js"></script>
