--- a/jp-activities.html
+++ b/jp-activities.html
@@ -83,6 +83,21 @@
       /* 更新动画时序函数 */
     }
 
+    .orange-dot-eth {
+      position: absolute;
+      top: 23.1%;
+      left: 50.9%;
+      width: 5px;
+      /* 减小红点尺寸 */
+      height: 5px;
+      /* 减小红点尺寸 */
+      background-color: rgba(255, 140, 0, 0.994);
+      border-radius: 50%;
+      animation: ripple 2s infinite ease-out;
+      /* 更新动画时序函数 */
+    }
+
+
     @keyframes ripple {
       0% {
         box-shadow: 0 0 0 0 rgba(255, 128, 0, 0.765),
@@ -366,7 +381,7 @@
 
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_jp6.gif" width="800" alt="banner Image" />
- 
+        <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
 
 
@@ -474,7 +489,7 @@
       <div>
         <hr class="display-mobile" style="width:113%">
       
-        <h3 class="display-mobile">演讲 & 主持 <br></h3>
+        <h3 class="display-mobile">講演と司会 <br></h3>
         <p align="justify">
           
           <strong>▸ 国連気候変動会議</strong> 分科会の司会者/講演者「中国のエネルギー転換と技術革新」(グローバルライブ放送)
