--- a/en-activities.html
+++ b/en-activities.html
@@ -292,6 +292,7 @@
 
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_en6.gif" style="width: 100%; margin-bottom: 4px;" alt="banner Image" />
+        <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
 
       <p class="hidden-mobile"></p>
