--- a/kr-activities.html
+++ b/kr-activities.html
@@ -351,6 +351,12 @@
                   <li><a href="kr-research.html">연구 진행</a></li>
                   <li><a href="kr-resume.html">이력서</a></li>
                   <li><a href="kr-activities.html"><span style="color: rgb(253, 93, 7);">취미 ⏴</span></a></li>
+                  <li><a href="#">&nbsp;• 연설</a></li>
+                  <li><a href="#writing">&nbsp;• 글쓰기</a></li>
+                  <li><a href="#visiting">&nbsp;• 방문</a></li>
+                  <li><a href="#travel">&nbsp;• 여행</a></li>
+                  <li><a href="#sports">&nbsp;• 스포츠</a></li>
+                  <li><a href="https://photo.h-xu.com" target="_blank">&nbsp;• 사진</a></li>
                   <li><a href="#contact">연락처</a></li>
                   <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
