--- a/cn-research.html
+++ b/cn-research.html
@@ -440,7 +440,7 @@
                         <option value="es.html">Español</option>
                         <option value="fr.html">Français</option>
                         <option value="it.html">Italiano</option>
-                        <option value="ru.html">Русский</option>
+                        <option value="ru-research.html">Русский</option>
                         <option value="ar.html">اللغة العربية</option>
                     </select>
                 </span>
@@ -522,7 +522,7 @@
                         <option value="es.html">🇪🇸 Español</option>
                         <option value="fr.html">🇫🇷 Français</option>
                         <option value="it.html">🇮🇹 Italiano</option>
-                        <option value="ru.html">🇷🇺 Русский</option>
+                        <option value="ru-research.html">🇷🇺 Русский</option>
                         <option value="ar.html">🇸🇦 اللغة العربية</option>
                     </select>
                 </span>
@@ -938,7 +938,7 @@
                         <strong>环形气液界面跳汰磁选装置 [P]</strong><br>
                         发明人: 富鸣教授, 张辉教授, <strong>徐泓</strong>[BJTU], 颜鲁婷教授<br>
                         2013 | 中国发明专利号: CN102441489B, 生效日期: 10/2013. [<a
-                            href="https://patents.google.com/patent/CN102441489B/en" target="_blank">专利文件</a>]
+                            href="https://patents.google.com/ptent/CN102441489B/en" target="_blank">专利文件</a>]
                     </li>
                     <li>
                         <strong>可连续运行的气液界面跳汰磁选可控环形装置 [P]</strong><br>
