--- a/cn-resume.html
+++ b/cn-resume.html
@@ -384,7 +384,7 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-resume.html">Русский</option>
             <option value="ar.html">اللغة العربية</option>
           </select>
         </span>
@@ -466,7 +466,7 @@
             <option value="es.html">🇪🇸 Español</option>
             <option value="fr.html">🇫🇷 Français</option>
             <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
+            <option value="ru-resume.html">🇷🇺 Русский</option>
             <option value="ar.html">🇸🇦 اللغة العربية</option>
           </select>
         </span>
