--- a/en-resume.html
+++ b/en-resume.html
@@ -324,7 +324,7 @@
             <!---
            
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-resume.html">Русский</option>
             <option value="cn-resume.html">中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
@@ -401,7 +401,7 @@
               <!---
               
               <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
               <option value="kr-resume.html">🇰🇷 한국어</option>
