--- a/jp-activities.html
+++ b/jp-activities.html
@@ -404,7 +404,7 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-activities.html">Русский</option>
             <option value="ar.html">اللغة العربية</option>
           </select>
         </span>
@@ -480,7 +480,7 @@
             <option value="es.html">🇪🇸 Español</option>
             <option value="fr.html">🇫🇷 Français</option>
             <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
+            <option value="ru-activities.html">🇷🇺 Русский</option>
             <option value="ar.html">🇸🇦 اللغة العربية</option>
           </select>
         </span>
