--- a/jp-research.html
+++ b/jp-research.html
@@ -334,13 +334,13 @@
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="jp-research.html" select>日本語</option>
             <option value="cn-research.html">中文</option>
-            <option value="kr.html">한국어</option>
+            <option value="kr-research.html">한국어</option>
             <option value="de.html">Deutsch</option>
             <option value="en-research.html">English</option>
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-research.html">Русский</option>
             <option value="ar.html">اللغة العربية</option>
           </select>
         </span>
@@ -410,13 +410,13 @@
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="jp-research.html" select>🇯🇵 日本語</option>
             <option value="cn-research.html">🇨🇳 中文</option>
-            <option value="kr.html">🇰🇷 한국어</option>
+            <option value="kr-research.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
             <option value="en-research.html">🇬🇧 English</option>
             <option value="es.html">🇪🇸 Español</option>
             <option value="fr.html">🇫🇷 Français</option>
             <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
+            <option value="ru-research.html">🇷🇺 Русский</option>
             <option value="ar.html">🇸🇦 اللغة العربية</option>
           </select>
         </span>
