--- a/kr-activities.html
+++ b/kr-activities.html
@@ -409,7 +409,7 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-activities.html">Русский</option>
             <option value="ar.html">اللغة العربية</option>
 
 
@@ -485,7 +485,7 @@
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
               <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <option value="ru-activities.html">🇷🇺 Русский</option>
               <option value="ar.html">🇸🇦 اللغة العربية</option>
 
 
