--- a/cn-activities.html
+++ b/cn-activities.html
@@ -386,7 +386,7 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-activities.html">Русский</option>
             <option value="ar.html">اللغة العربية</option>
           </select>
         </span>
@@ -468,7 +468,7 @@
             <option value="es.html">🇪🇸 Español</option>
             <option value="fr.html">🇫🇷 Français</option>
             <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
+            <option value="ru-activities.html">🇷🇺 Русский</option>
             <option value="ar.html">🇸🇦 اللغة العربية</option>
           </select>
         </span>
