--- a/kr-resume.html
+++ b/kr-resume.html
@@ -376,7 +376,7 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="ru-resume.html">Русский</option>
             <option value="ar.html">اللغة العربية</option>
 
 
@@ -452,7 +452,7 @@
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
               <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="ar.html">🇸🇦 اللغة العربية</option>
 
 
