--- a/ru-research.html
+++ b/ru-research.html
@@ -272,7 +272,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/hong8.png" width="155" />
+          <img id="optionalstuff" src="images/banner_cns4_left.gif" width="155" />
           <div style="margin-bottom: 16px;"></div>
           <h3 class="hidden-mobile" align="left">Хун Сюй</h3>
 
@@ -309,7 +309,7 @@
       <!--<img class="hidden-mobile" src="images/banner_ru2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ru3.png" width="800" alt="banner Image" />
+        <img src="images/banner_ru4.gif" width="800" alt="banner Image" />
       </div>
 
       <p class="hidden-mobile"></p>
